Created basic svm model

--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -161,5 +161,36 @@ paste('The kappa statistic of the kNN model is:',
       round(kappa.knn$Unweighted[[1]], 3))
 ```
 
+This model had an overall accuracy of 74.2% but a Cohen's kappa statistic of
+only 0.092. This shows poor performance by the model and reinforces the concern
+that the imbalance in the data set is introducing bias in the model.
+
+
+## SVM
+
+```{r}
+# Create the model
+bc_svm <- train(cancer_type_detailed ~ ., data = bc_train, method = 'svmLinear3')
+
+# Predict test data
+bc_svm.pred <- predict(bc_svm, bc_test)
+```
+
+I created a simple Support Vector Machine model using the svmLinear3 parameter.
+
+```{r}
+# Create CrossTable
+svm.cross <- CrossTable(x = bc_test$cancer_type_detailed, y = bc_svm.pred,
+                        prop.chisq = F)
+
+# Find accuracy
+accuracy.svm <- findAccuracy(svm.cross$t)
+paste('The accuracy of the model is:', round(accuracy.svm, 4))
+
+# Find kappa
+kappa.svm <- Kappa(svm.cross$t)
+paste('The Kappa Statistic is:', round(kappa.svm$Unweighted[[1]], 4))
+```
+
 
 
