--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -6,10 +6,14 @@ output: html_document
 
 # Business Understanding
 
+For my final project I am creating a model to classify type of breast cancer from
+gene expression data. I am using data taken from Kaggle at:
+https://www.kaggle.com/datasets/raghadalharbi/breast-cancer-gene-expression-profiles-metabric/download'
+
 
 # Data Understanding
 
-```{r}
+```{r import-libraries}
 library(tidyverse)
 library(caret)
 library(class)
@@ -85,8 +89,7 @@ means I can continue my analysis without concern.
 ```{r remove-classes}
 # Remove highly imbalanced classes
 bc <- bc[bc$cancer_type_detailed %in% c('Breast Invasive Ductal Carcinoma',
-                                        'Breast Invasive Lobular Carcinoma',
-                                        'Breast Mixed Ductal and Lobular Carcinoma'),]
+                                        'Breast Invasive Lobular Carcinoma'),]
 
 table(bc$cancer_type_detailed)
 ```
@@ -97,30 +100,39 @@ In this section I removed three of the total classes from the column
 ignore these classes. There is still some imbalance in the membership of the
 classes, but this is much closer to an acceptable split.
 
+**I HAVE CHANGED THIS TO BINARY CLASSIFIER BC FUCK MIXED**
+
+## Split Data
+**THIS SHOULD BE MOVED UP**
+```{r split-data}
+# Split the data to maintain proportions of classes
+sample <- createDataPartition(y = bc$cancer_type_detailed,
+                              p = 0.7,
+                              list = F)
+
+# Split into training and testing data
+bc_train <- bc.filter[sample,]
+bc_train$cancer_type_detailed <- bc[sample, c('cancer_type_detailed')]
+bc_test <- bc.filter[-sample,]
+bc_test$cancer_type_detailed <- bc[-sample, c('cancer_type_detailed')]
+
+# Check that the data was split properly
+cat('\nProportions of training data classes:')
+proportions(table(bc_train$cancer_type_detailed))
+cat('\nProportion of testing data classes:')
+proportions(table(bc_test$cancer_type_detailed))
+```
+
+In this section I split the data into training and validation data sets. I used
+the function `createDataPartitions()` to do this after setting the random number
+generator and seed. I decided to use a 70/30 split for this project. 
+
+I then checked the proportions of each class to ensure that there were equivalent
+proportions in each data set. As we can see, the function worked correctly and
+we do have similar proportions for each of the classes in the training and 
+validation data. 
+
 ## Feature Elimination
-
-```{r feature-elimination, include=FALSE}
-# Set the Random Number Generator and seed
-RNGversion('3.5.2'); set.seed(5030)
-
-# Convert cancer type to numeric for regression
-bc$cancer_type_detailed_numeric <- as.numeric(factor(bc$cancer_type_detailed))
-
-# Create initial multiple logisitic regression model
-bc.reg <- glm(cancer_type_detailed_numeric ~ ., data = bc[,c(2:478)], family = 'gaussian')
-```
-
-```{r}
-# Perform the stepwise elimination
-bc.step <- step(bc.reg, direction = 'backward')
-# beginning AIC was 3996.98, after feature selection it dropped to 3444
-```
-
-With 477 features, I was nervous about the curse of dimensionality so I want to
-reduce the number of features in my dataset. I accomplished this using backward
-stepwise feature elimination using a multiple logistic regression. The model
-initially had an AIC of 3999.98, but after removing all but 90 features it
-reduced the AIC to 3443.711. 
 
 ```{r}
 bc_train$cancer_type_detailed_numeric <- as.numeric(factor(bc_train$cancer_type_detailed))
@@ -153,37 +165,6 @@ bc_train.filter$cancer_type_detailed <- bc_train$cancer_type_detailed
 In this section I created a new dataframe containing only the features selected
 for in the multiple logistic regression model. This reduced the number of features
 from 477 to 91.
-
-## Split Data
-**THIS SHOULD BE MOVED UP**
-```{r split-data}
-# Split the data to maintain proportions of classes
-sample <- createDataPartition(y = bc$cancer_type_detailed,
-                              p = 0.7,
-                              list = F)
-
-# Split into training and testing data
-bc_train <- bc.filter[sample,]
-bc_train$cancer_type_detailed <- bc[sample, c('cancer_type_detailed')]
-bc_test <- bc.filter[-sample,]
-bc_test$cancer_type_detailed <- bc[-sample, c('cancer_type_detailed')]
-
-# Check that the data was split properly
-cat('\nProportions of training data classes:')
-proportions(table(bc_train$cancer_type_detailed))
-cat('\nProportion of testing data classes:')
-proportions(table(bc_test$cancer_type_detailed))
-```
-
-In this section I split the data into training and validation data sets. I used
-the function `createDataPartitions()` to do this after setting the random number
-generator and seed. I decided to use a 70/30 split for this project. 
-
-I then checked the proportions of each class to ensure that there were equivalent
-proportions in each data set. As we can see, the function worked correctly and
-we do have similar proportions for each of the classes in the training and 
-validation data. 
-
 
 ## Oversampling
 
@@ -277,7 +258,8 @@ that the imbalance in the data set is introducing bias in the model.
 
 ```{r}
 # Create the model
-bc_svm <- train(cancer_type_detailed ~ ., data = bc_train, method = 'svmLinear3')
+bc_svm <- train(cancer_type_detailed ~ ., data = bc_train.oversampled, 
+                method = 'svmLinear3')
 
 # Predict test data
 bc_svm.pred <- predict(bc_svm, bc_test)
@@ -307,7 +289,7 @@ model. However, the kappa statistic has increased to 0.15.
 
 ```{r neural-net include=FALSE}
 # Train the model
-bc_ann <- train(cancer_type_detailed ~ ., data = bc_train, method = 'avNNet', 
+bc_ann <- train(cancer_type_detailed ~ ., data = bc_train.oversampled, method = 'avNNet', 
                 na.action = na.omit)
 
 # Find predictions
