--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -157,7 +157,9 @@ cols.select <- cols.select[-1]
 
 # Filter dataset to only include these columns
 bc_train.filter <- bc_train[, cols.select]
+bc_test.filter <- bc_test[, cols.select]
 bc_train.filter$cancer_type_detailed <- bc_train$cancer_type_detailed
+bc_test.filter$cancer_type_detailed <- bc_test$cancer_type_detailed
 ```
 
 In this section I created a new dataframe containing only the features selected
@@ -176,13 +178,11 @@ Minority Oversamplng Technique (SMOTE).
 # Run an oversampling method
 # mwmote(bc_train.filter, numInstances = 3150, classAttr = bc_train$cancer_type_detailed)
 
-# A simple oversampling
-# bmdalc <- filter(bc_train, 
-#                  cancer_type_detailed == 'Breast Mixed Ductal and Lobular Carcinoma')
-bilc <- filter(bc_train, cancer_type_detailed == 'Breast Invasive Lobular Carcinoma')
+# Simple oversampling
+bilc <- filter(bc_train.filter, cancer_type_detailed == 'Breast Invasive Lobular Carcinoma')
 
 # Add to the dataset
-bc_train.oversampled <- rbind(bc_train, bilc, bilc, bilc, bilc, bilc, bilc, 
+bc_train.oversampled <- rbind(bc_train.filter, bilc, bilc, bilc, bilc, bilc, bilc, 
                               bilc, bilc, bilc, bilc)
 
 # Check that it worked
@@ -191,11 +191,10 @@ table(bc_train.oversampled$cancer_type_detailed)
 
 In this code block I created a simple oversampling method of the data to fix
 the class imbalance problem. There were 1050 classes of Breast Invasive Ductal
-Carcinoma, 100 instances of Breast Invasive Lobular Carcinoma, and 145 instances
-of Breast Mixed Ductal and Lobular Carcinoma. I used oversampling to increase
-the samples of the minority classes to be about the same as the majority class.
-I needed to make 6 copies of the Breast Mixed Ductal and Lobular Carcinoma and
-10 copies of the Breast Invasive Lobulr Carcinoma.
+Carcinoma and 100 instances of Breast Invasive Lobular Carcinoma. I used 
+oversampling to increase
+the samples of the minority class to be about the same as the majority class.
+I needed to make 10 copies of the Breast Invasive Lobulr Carcinoma.
 
 I created the variable `bc_train.oversampled` which contains almost equal
 sizes of each class.
@@ -207,11 +206,11 @@ sizes of each class.
 ```{r}
 # Create kNN model
 bc.knn <- knn(dplyr::select(bc_train.oversampled, -cancer_type_detailed), 
-              dplyr::select(bc_test, -cancer_type_detailed), 
+              dplyr::select(bc_test.filter, -cancer_type_detailed), 
               cl = bc_train.oversampled$cancer_type_detailed, k = 2)
 
 # Create Cross Table to verify accuracy
-knn.cross <- CrossTable(x = bc_test$cancer_type_detailed, y = bc.knn, 
+knn.cross <- CrossTable(x = bc_test.filter$cancer_type_detailed, y = bc.knn, 
                         prop.chisq = F)
 ```
 
@@ -234,13 +233,13 @@ of the data set.
 
 ```{r}
 # Function to find the Accuracy
-findAccuracy <- function(cm) {
-    accuracy = (cm[1] + cm[5] + cm[9]) / sum(cm)
-}
+# findAccuracy <- function(cm) {
+#     accuracy = (cm[1] + cm[5] + cm[9]) / sum(cm)
+# }
 
 # Find the Kappa value
-accuracy.knn <- findAccuracy(knn.cross$t)
-paste('The accuracy of this kNN model is:', round(accuracy.knn, 3))
+# accuracy.knn <- findAccuracy(knn.cross$t)
+# paste('The accuracy of this kNN model is:', round(accuracy.knn, 3))
 kappa.knn <- Kappa(knn.cross$t)
 paste('The kappa statistic of the kNN model is:', 
       round(kappa.knn$Unweighted[[1]], 3))
@@ -270,8 +269,8 @@ svm.cross <- CrossTable(x = bc_test$cancer_type_detailed, y = bc_svm.pred,
                         prop.chisq = F)
 
 # Find accuracy
-accuracy.svm <- findAccuracy(svm.cross$t)
-paste('The accuracy of the model is:', round(accuracy.svm, 4))
+# accuracy.svm <- findAccuracy(svm.cross$t)
+# paste('The accuracy of the model is:', round(accuracy.svm, 4))
 
 # Find kappa
 kappa.svm <- Kappa(svm.cross$t)
@@ -299,8 +298,8 @@ ann.cross <- CrossTable(x = bc_test$cancer_type_detailed, y = bc_ann.pred,
                         prop.chisq = F)
 
 # Find accuracy
-accuracy.ann <- findAccuracy(ann.cross$t)
-paste('The accuracy of the model is:', round(accuracy.ann, 4))
+# accuracy.ann <- findAccuracy(ann.cross$t)
+# paste('The accuracy of the model is:', round(accuracy.ann, 4))
 
 # Find kappa
 kappa.ann <- Kappa(ann.cross$t)
