--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -176,15 +176,11 @@ Minority Oversamplng Technique (SMOTE).
 
 ```{r over-sampling}
 # Run an oversampling method
-mwmote(bc_train.filter, numInstances = 2100, 
-       classAttr = bc_train.filter$cancer_type_detailed)
-
-# Simple oversampling
-bilc <- filter(bc_train.filter, cancer_type_detailed == 'Breast Invasive Lobular Carcinoma')
+minority_cases <- mwmote(bc_train.filter, numInstances = 900, 
+                         classAttr = 'cancer_type_detailed')
 
 # Add to the dataset
-bc_train.oversampled <- rbind(bc_train.filter, bilc, bilc, bilc, bilc, bilc, bilc, 
-                              bilc, bilc, bilc, bilc)
+bc_train.oversampled <- rbind(bc_train.filter, minority_cases)
 
 # Check that it worked
 table(bc_train.oversampled$cancer_type_detailed)
