added business understanding and imported data using api

--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -6,14 +6,31 @@ output: html_document
 
 # Business Understanding
 
-For my final project I am creating a model to classify type of breast cancer from
-gene expression data. I am using data taken from Kaggle at:
-https://www.kaggle.com/datasets/raghadalharbi/breast-cancer-gene-expression-profiles-metabric/download'
+Breast Cancer is the second most common type of cancer among women in the US.
+Every year over 250,000 women are diagnosed with breast cancer and over 40,000
+die from the disease ("Basic Information About Breast Cancer", 2021).
+
+There are many types of breast cancer, but the two most common types are invasive
+lobular and ductal carcinoma. These two types of breast cancer have various
+genomic differences which distinguish them and respond differently to treatment
+(Barroso-Sousa & Metzger-Filho, 2016). Therefore it is essential that these
+two types can be distinguished from each other. 
+
+For this project I am particularly interested in classifying these two types of
+breast cancer from gene expression data. Gene expression classification could
+prove beneficial as it is cheaper than traditional cancer screening methods
+(Tobares-Soto et al., 2020). This could be especially useful for developing
+countries that do not have the same resources as the US.
 
 
 # Data Understanding
 
+For this project I am using the METABRIC Breast Cancer Gene Expression Profiles
+data set from kaggle: https://www.kaggle.com/datasets/raghadalharbi/breast-cancer-gene-expression-profiles-metabric.
+This data was downloaded from the cBioPortal. 
+
 ```{r import-libraries}
+library(cBioPortalData)
 library(tidyverse)
 library(caret)
 library(class)
@@ -27,10 +44,28 @@ library(imbalance)
 
 ```{r}
 # Import the data
-# bc_filepath <- 'https://www.kaggle.com/datasets/raghadalharbi/breast-cancer-gene-expression-profiles-metabric/download'
-# bc <- read.csv(bc_filepath)
-bc <- read.csv('METABRIC_RNA_Mutation.csv')
-dim(bc)
+cbio <- cBioPortal()
+clinical <- clinicalData(api = cbio, studyId = 'brca_metabric')
+all_samples <- allSamples(cbio, 'brca_metabric')
+gene_panel <- getGenePanel(cbio, 'METABRIC_173')
+gene_data <- molecularData(cbio, molecularProfileIds = 'brca_metabric_mrna', entrezGeneIds = gene_panel$entrezGeneId, sampleIds = all_samples$sampleId)
+
+# bc <- read.csv('METABRIC_RNA_Mutation.csv')
+```
+
+In this section I used the cBioPortal api to pull clinical data, sample data,
+and the gene data from the study.
+
+```{r}
+# Clean data
+#############
+
+gene_data <- gene_data$brca_metabric_mrna
+# Join the gene name
+gene_data %>%
+  left_join(gene_panel)
+left_join(gene_data, gene_panel, by = entrezGeneId)
+
 ```
 
 ```{r select-columns}
@@ -176,11 +211,15 @@ Minority Oversamplng Technique (SMOTE).
 
 ```{r over-sampling}
 # Run an oversampling method
-minority_cases <- mwmote(bc_train.filter, numInstances = 900, 
-                         classAttr = 'cancer_type_detailed')
+# minority_cases <- mwmote(bc_train.filter, numInstances = 900,
+#                          classAttr = 'cancer_type_detailed')
+
+# Simple oversampling method
+bilc <- filter(bc_train.filter, cancer_type_detailed == 'Breast Invasive Lobular Carcinoma')
 
 # Add to the dataset
-bc_train.oversampled <- rbind(bc_train.filter, minority_cases)
+bc_train.oversampled <- rbind(bc_train.filter, bilc, bilc, bilc, bilc, bilc,
+                              bilc, bilc, bilc, bilc)
 
 # Check that it worked
 table(bc_train.oversampled$cancer_type_detailed)
@@ -211,17 +250,14 @@ knn.cross <- CrossTable(x = bc_test.filter$cancer_type_detailed, y = bc.knn,
                         prop.chisq = F)
 ```
 
-In this section I created a k nearest neighbors model using 3 values of k. 
-This model has an accuracy of 74.8%. 
+In this section I created a k nearest neighbors model using 2 values of k. 
+This model has an accuracy of 77.9%. 
 
-The precision of Breast Invasive Ductal Carcinoma is 83.6% (399 / 477) and the
-recall is 86.67% (399 / 450).
+The precision of Breast Invasive Ductal Carcinoma is 80.67% (363 / 450) and the
+recall is 94.2% (363 / 385).
 
-The precision of Breast Invasic Lobular Carcinoma is 22.2% (8 / 31) and the 
-recall is 19% (8 / 42).
-
-The precision of Breast Mixed Ductal and Lobular Carcinoma is 17.4% (8 / 46)
-and the recall is 12.9% (8 / 62).
+The precision of Breast Invasive Lobular Carcinoma is 22.2% (20 / 31) and the 
+recall is 19% (8 / 42). **UPDATE THIS**
 
 From this model we can see that the most accurate classification is Breast
 Invasive Ductal Carcinoma. Neither of the other two categories are well
@@ -242,8 +278,8 @@ paste('The kappa statistic of the kNN model is:',
       round(kappa.knn$Unweighted[[1]], 3))
 ```
 
-This model had an overall accuracy of 74.2% but a Cohen's kappa statistic of
-only 0.092. This shows poor performance by the model and reinforces the concern
+This model had an overall accuracy of 77.8% but a Cohen's kappa statistic of
+only 0.166. This shows poor performance by the model and reinforces the concern
 that the imbalance in the data set is introducing bias in the model.
 
 
